# PWPS

./: .env.example  .gitignore  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
apps/api/: Dockerfile  README.md  alembic.ini  pyproject.toml
apps/api/data/knowledge_base/: local_documents.json
apps/api/migrations/: env.py
apps/api/migrations/versions/: 20260601_0001_create_runs.py  20260601_0002_add_pending_decision.py
apps/api/src/pwps_agent_api/: __init__.py  main.py
apps/api/src/pwps_agent_api/actors/: __init__.py  base.py  human.py  virtual.py
apps/api/src/pwps_agent_api/api/: documents.py  runs.py
apps/api/src/pwps_agent_api/audit/: __init__.py  engine.py  repair.py
apps/api/src/pwps_agent_api/cli/: __init__.py  auto_draft.py  ingest.py
apps/api/src/pwps_agent_api/core/: __init__.py  checkpoint.py  config.py  llm.py  readiness.py
apps/api/src/pwps_agent_api/db/: __init__.py  models.py  session.py
apps/api/src/pwps_agent_api/domain/: __init__.py  loader.py  spec.py
apps/api/src/pwps_agent_api/events/: __init__.py  store.py
apps/api/src/pwps_agent_api/fields/: __init__.py  registry.py
apps/api/tests/: test_actors.py  test_audit_repair.py  test_auto_draft_cli.py  test_auto_draft_workflow.py  test_document_upload.py  test_domain_loader.py  test_field_registry.py  test_guard_validator.py  test_guided_run_api.py  test_health.py  test_knowledge_providers.py  test_knowledge_service.py  test_migrations_and_readiness.py  test_run_api.py  test_schema_models.py  test_skills.py
apps/api/tests/eval/: dataset.json  runner.py
(+101 files in other folders)
