[project]
name = "pwps-agent-api"
version = "0.1.0"
description = "FastAPI backend for the pWPS Agent workflow system."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "aiosqlite>=0.20.0",
  "alembic>=1.16.0",
  "asyncpg>=0.30.0",
  "fastapi[standard]>=0.116.0",
  "langchain-deepseek>=1.0.1",
  "langchain-milvus>=0.3.3",
  "langchain-openai>=1.2.2",
  "langchain-text-splitters>=1.1.2",
  "langgraph>=1.0.0",
  "pydantic>=2.11.0",
  "pymilvus>=2.6.15",
  "python-dotenv>=1.2.2",
  "python-multipart>=0.0.30",
  "redis>=5.2.0",
  "slowapi>=0.1.9",
  "sqlalchemy[asyncio]>=2.0.0",
  "uvicorn[standard]>=0.35.0",
]

[dependency-groups]
dev = [
  "httpx>=0.28.0",
  "mypy>=1.16.0",
  "pytest>=8.4.0",
  "pytest-asyncio>=1.4.0",
  "ruff>=0.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pwps_agent_api"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
packages = ["pwps_agent_api"]
